# lambda-calculus-polyglot

./: .env.example  .gitignore  .replit  Dockerfile  GraderInterface.ts  Makefile  README.org  ai_code_generation_create.sql  ai_code_generation_grader.py  ai_code_generation_logs.py  bedrock_generate.py  llm-prompt.md  prompt.md.tmpl  pyproject.toml  setup_codeevaluatepro.sh
Bash/: lambda_calculus.sh
C/: Makefile  lambda_calculus.c
Clojure/: lambda_calculus.clj  lambda_calculus_logic.clj
ELisp/: lambda-calculus.el
Erlang/: lambda_calculus.erl
Go/: lambda_calculus.go
Haskell/: LambdaCalculus.hs
Julia/: lambda_calculus.jl
Kotlin/: LambdaCalculus.kt
Lua/: lambda_calculus.lua
Node.js/: Makefile  lambda_calculus.js
OCaml/: lambda_calculus.ml
Prolog/: lambda_calculus.pl
Python/: Makefile  beta_reduction.py  check_readme.py  church_encodings.py  lambda_calculus.py  lambda_expressions.py  lc.py  test_lambda_calculus.py  y_combinator.py
Ruby/: lambda_calculus.rb
Rust/: lambda_calculus.rs
Scala/: LambdaCalculus.scala
Scheme/: Makefile  README.org  beta-reduction.scm  lc-examples.scm  lc-utils.scm  lc.scm  llm-chatgpt.scm  llm-claude.scm  llm-gemini.scm  llm-khoj.scm  llm-metaai.scm  llm-ollama-zephyr.md  llm-perplexity.scm  llm-phind.md  llm-prompt.md  pyproject.toml  scheme_parser.py  y-combinator.scm
Swift/: LambdaCalculus.swift
TypeScript/: lambdaCalculus.ts
codeevaluatepro/: .gitignore  LICENSE  Makefile  Procfile  README.md  dev.cljs.edn  min.cljs.edn  package-lock.json  package.json  project.clj
miniKanren/: lambda-calculus.scm
(+20 files in other folders)
